Bug:  618490 Reviewer:  Self Comments:  While the breadcrumb tree is open, a vertical scrollbar is now added to the main frame for the duration.
Files:
M    gwt/src/org/kablink/teaming/gwt/client/GwtMainPage.java
M    gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css

--- a/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -1933,6 +1933,11 @@ position:absolute;
 top:100px;
 }
 
+.gwtUI_ss_forceVerticalScroller
+{
+	overflow-y: auto !important;
+}
+
 .gwtUI_ss_brightest   {opacity: 1.0;}
 .gwtUI_ss_brightestIE {filter: alpha(opacity=100);}
 .gwtUI_ss_brighter    {opacity: 0.8;}
